feat: get all videos